fixed the alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,9 @@ p{
   
 }
 .routeclass{
+  display: flex;
+  justify-content: center;
+  width: 100%;
   
 }
 
