--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -3,7 +3,6 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background-color: aqua;
   }
   p{
     width:500px;
